# autonomous_mobile_bot

./: README.md  TODO.txt
all_launch/: CMakeLists.txt  package.xml
all_launch/config/: nav2_params.yaml
all_launch/launch/: all_launch.py  navigation_launch.py
all_launch/urdf/: lidar.urdf  lidar.xacro  lidar_imu.urdf  lidar_imu.xacro
frontier_explorer/: CMakeLists.txt  package.xml  stuff.txt
frontier_explorer/include/frontier_explorer/: frontier_explorer.hpp  frontier_explorer_client.hpp  frontier_explorer_server.hpp  frontier_search.hpp
frontier_explorer/src/: as_action_server.cpp  autoslam_action_server.cpp  frontier_explorer.cpp  frontier_explorer_client.cpp  frontier_explorer_client_node.cpp  frontier_explorer_node.cpp  frontier_explorer_server.cpp  frontier_explorer_server_node.cpp  frontier_search.cpp  main.cpp
keyboard_teleop/: CMakeLists.txt
keyboard_teleop/src/: main.cpp
lifecycle_manager/: CMakeLists.txt  package.xml
lifecycle_manager/include/lifecycle_manager/: lifecycle_manager.hpp  lifecycle_manager_client.hpp
lifecycle_manager/src/: lifecycle_manager.cpp  lifecycle_manager_client.cpp  main.cpp
map_manager/: CMakeLists.txt  package.xml  stuff.txt
map_manager/map/: map.yaml
map_manager/src/: main.cpp  map_manager_node.cpp  stuff.cpp  test_lifecycle.cpp
microcontroller_interface/: CMakeLists.txt  package.xml
microcontroller_interface/config/: ekf.yaml  rviz_config.rviz
microcontroller_interface/launch/: debug_odom_and_motor_control.launch.py  odom_and_motor_control.launch.py  real_odometry.launch.py
microcontroller_interface/src/: debug_odom_imu_node.cpp  imu_node.cpp  keyboard_teleop.cpp  odom_imu_node.cpp  pid_motor_control.cpp  test_pwm.cpp
mobile_bot/: CMakeLists.txt  package.xml
mobile_bot/launch/: autonomous_slam.launch.py  robot_bringup.launch.py
mobile_bot/models/: model.urdf
mobile_bot/worlds/: simple_house.world  test_world.world
mobile_bot_msgs/: CMakeLists.txt  package.xml
mobile_bot_msgs/action/: AutonomousSlam.action  ExploreFrontier.action
mobile_bot_msgs/srv/: AddNode.srv  RemoveNode.srv
navigation2/nav2_amcl/src/: amcl_node.cpp
navigation2/nav2_costmap_2d/src/: costmap_2d_ros.cpp
navigation2/nav2_lifecycle_manager/: CMakeLists.txt  package.xml
navigation2/nav2_lifecycle_manager/include/nav2_lifecycle_manager/: lifecycle_manager.hpp  lifecycle_manager_client.hpp
navigation2/nav2_lifecycle_manager/src/: lifecycle_manager.cpp  lifecycle_manager_client.cpp
navigation2/nav2_msgs/: CMakeLists.txt
navigation2/nav2_msgs/action/: ExploreFrontier.action
navigation2/nav2_msgs/srv/: AddNode.srv  RemoveNode.srv
navigation2/navigation2/: package.xml
node_controller/: CMakeLists.txt  package.xml
node_controller/src/: node_controller.cpp
rplidar_ros/launch/: rplidar_a1_launch.py
setup/: Dockerfile
setup/.devcontainer/: devcontainer.json
simulation_launch/: CMakeLists.txt  package.xml
simulation_launch/config/: nav2_params.yaml  real_launch_config.rviz
simulation_launch/launch/: autonomous_slam.launch.py  navigation_launch.py  robot_bringup.launch.py  robot_state_publisher.launch.py  robot_world.launch.py  spawn_robot.launch.py
simulation_launch/models/: model.config  model.sdf  xacro_model.urdf
simulation_launch/models/test_bot/: model.config  model.sdf  model.urdf  model.xacro
simulation_launch/worlds/: instant_map.world
slam/: CMakeLists.txt  package.xml  rviz_plugins.xml
slam/config/: mapper_params_online_async.yaml  slam_toolbox_default.rviz
slam/include/slam/: get_pose_helper.hpp  laser_utils.hpp  loop_closure_assistant.hpp  map_saver.hpp  serialization.hpp  slam_async.hpp  slam_common.hpp  slam_mapper.hpp  snap_utils.hpp  toolbox_msgs.hpp  toolbox_types.hpp  visualization_utils.hpp
slam/launch/: online_async_launch.py
slam/lib/karto_sdk/: CMakeLists.txt  package.xml
slam/rviz_plugin/: slam_rviz_plugin.cpp  slam_rviz_plugin.hpp
slam/solvers/: ceres_solver.cpp  ceres_solver.hpp
slam/src/: laser_utils.cpp  loop_closure_assistant.cpp  map_saver.cpp  slam_async.cpp  slam_async_node.cpp  slam_common.cpp  slam_mapper.cpp
